--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -162,6 +162,7 @@
 
         > .flex-container{
             flex-direction: column;
+            align-items: center;
         }
 
         > .flex-container .flex-container{
@@ -191,6 +192,11 @@
             position: relative;
             top: -30px;
             left: - 30px;
+        }
+
+        figure, img{
+            max-height: 320px;
+            max-width: 320px;
         }
     }
 
